# dillery

./: LICENSE  README.md  pyproject.toml
docs/services/: messages.yaml  servers.yaml
docs/services/scheduler/: asyncapi.yaml
docs/services/worker/: asyncapi.yaml
src/dillery/scheduler/spec/: __init__.py  consumer.py  message.py  publisher.py
