[tool.poetry]
name = "dillery"
version = "0.1.0"
description = "Background task scheduling service with AsyncAPI specification"
authors = ["zerlok <denergytro@gmail.com>"]
license = "MIT"

# FIXME: replace relative path dependencies with pypi packages
[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
asynchron = {git = "https://github.com/zerlok/asynchron.git", rev = "fix/complex-json-references", extras = ["codegen"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
